fix indentation problem

--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,19 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, width=device-width">
+    <meta property="og:site_name" content="">
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
     <title>SimpleTemplate</title>
     <!-- build:css({.tmp,app}) css/main.css-->
     <link rel="stylesheet" href="css/main.css">
     <!-- endbuild-->
+  </head>
+  <body>
+    <h1>Imagination is more important than knowledge.</h1>
     <!-- build:js js/vendor.js-->
     <!-- bower:js-->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -18,9 +27,7 @@
     <!-- endbuild-->
     <!-- build:js js/main.js-->
     <script type="text/javascript" src="js/Main.js"></script>
+    <script type="text/javascript" src="js/Hola.js"></script>
     <!-- endbuild-->
-  </head>
-  <body>
-    <h1>Imagination is more important than knowledge.</h1>
   </body>
 </html>
