--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="">
     <meta property="og:image" content="">
     <title>SimpleTemplate</title>
-    <!-- build:css({.tmp,app}) css/main.css-->
+    <!-- build:css css/main.css-->
     <link rel="stylesheet" href="css/main.css">
     <!-- endbuild-->
   </head>
@@ -26,8 +26,7 @@
     <!-- endbower-->
     <!-- endbuild-->
     <!-- build:js js/main.js-->
-    <script type="text/javascript" src="js/Main.js"></script>
-    <script type="text/javascript" src="js/Hola.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     <!-- endbuild-->
   </body>
 </html>
