--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, width=device-width">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, width=device-width, minimal-ui">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta property="og:site_name" content="">
     <meta property="og:title" content="">
     <meta property="og:description" content="">
@@ -19,10 +21,11 @@
     <!-- build:js js/vendor.js-->
     <!-- bower:js-->
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/three.js/three.min.js"></script>
+    <script src="bower_components/threejs/build/three.min.js"></script>
     <script src="bower_components/pixi.js/bin/pixi.js"></script>
     <script src="bower_components/vue/dist/vue.js"></script>
     <script src="bower_components/raf.js/raf.js"></script>
+    <script src="bower_components/dat-gui/build/dat.gui.js"></script>
     <!-- endbower-->
     <!-- endbuild-->
     <!-- build:js js/main.js-->
