--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
     <script src="bower_components/vue/dist/vue.js"></script>
     <script src="bower_components/raf.js/raf.js"></script>
     <script src="bower_components/dat-gui/build/dat.gui.js"></script>
+    <script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
     <!-- endbower-->
     <!-- endbuild-->
     <!-- build:js js/main.js-->
