fix watch + improve coffee

--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, width=device-width, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta property="og:site_name" content="">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
-    <meta property="og:type" content="">
+    <meta property="og:site_name" content="SimpleTemplate">
+    <meta property="og:title" content="SimpleTemplate">
+    <meta property="og:description" content="your website">
+    <meta property="og:type" content="website">
     <meta property="og:url" content="">
     <meta property="og:image" content="">
     <title>SimpleTemplate</title>
@@ -17,7 +17,7 @@
     <!-- endbuild-->
   </head>
   <body>
-    <h1>Imagination is more important than knowledge.</h1>
+    <h1>Imagination is more important than knowledge. Let start an awesome project!</h1>
     <!-- build:js js/vendor.js-->
     <!-- bower:js-->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -30,6 +30,10 @@
     <!-- endbower-->
     <!-- endbuild-->
     <!-- build:js js/main.js-->
+    <script type="text/javascript" src="js/core/2d/Stage2d.js"></script>
+    <script type="text/javascript" src="js/core/3d/Stage3d.js"></script>
+    <script type="text/javascript" src="js/core/scenes/Scene.js"></script>
+    <script type="text/javascript" src="js/core/scenes/SceneTraveler.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <!-- endbuild-->
   </body>
