fix the name of the stylus files

--- a/app/index.html
+++ b/app/index.html
@@ -21,12 +21,11 @@
     <!-- build:js js/vendor.js-->
     <!-- bower:js-->
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/threejs/build/three.min.js"></script>
+    <script src="bower_components/three.js/three.min.js"></script>
+    <script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
     <script src="bower_components/pixi.js/bin/pixi.js"></script>
-    <script src="bower_components/vue/dist/vue.js"></script>
     <script src="bower_components/raf.js/raf.js"></script>
     <script src="bower_components/dat-gui/build/dat.gui.js"></script>
-    <script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
     <!-- endbower-->
     <!-- endbuild-->
     <!-- build:js js/main.js-->
