--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,4 @@
-
-<h1>Template</h1><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
